feat: improved market insights page; added simultaneous uploads of redin and zillow data
